// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`candidateSelection golden (S4) > matches snapshot for payroll onboarding purpose (Japanese) 1`] = `
{
  "candidates": [
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-checklist",
      "fileName": "給与計算チェックリスト.md",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 48.92557077625571,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 24,
        "documentType": 0,
        "fileName": 18,
        "freshness": 3,
        "recency": 1.9255707762557077,
      },
    },
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-exception-memo",
      "fileName": "給与計算_例外対応メモ.txt",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 46.87077625570776,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 24,
        "documentType": 0,
        "fileName": 18,
        "freshness": 3,
        "recency": 1.8707762557077625,
      },
    },
    {
      "businessDomain": "料金管理",
      "docId": "doc-current-pricing",
      "fileName": "料金表_2026.csv",
      "matchReason": "正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 6.821461187214612,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.8214611872146118,
      },
    },
    {
      "businessDomain": "教育・研修",
      "docId": "doc-onboarding-rules",
      "fileName": "就業規則テンプレート.md",
      "matchReason": "正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 6.657077625570777,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.6570776255707762,
      },
    },
    {
      "businessDomain": "顧客対応",
      "docId": "doc-masking-pending",
      "fileName": "顧客対応メモ_書式.md",
      "matchReason": null,
      "reasonCode": "masking_required_unavailable",
      "reasonLabel": "マスク済み版なし",
      "recommendation": "needs_review",
      "score": 4.914611872146119,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.9146118721461187,
      },
    },
    {
      "businessDomain": "顧客対応",
      "docId": "doc-customer-memo-safe",
      "fileName": "顧客対応メモ_匿名化.txt",
      "matchReason": "現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 4.90365296803653,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.9036529680365297,
      },
    },
    {
      "businessDomain": "助成金相談",
      "docId": "doc-grant-consult",
      "fileName": "助成金相談メモ.txt",
      "matchReason": "現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 4.881735159817351,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.8817351598173515,
      },
    },
    {
      "businessDomain": "年末調整",
      "docId": "doc-upload-failed",
      "fileName": "年末調整_案内文.txt",
      "matchReason": null,
      "reasonCode": "human_confirmation_required",
      "reasonLabel": "人間確認が必要",
      "recommendation": "needs_review",
      "score": 4.84337899543379,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.84337899543379,
      },
    },
    {
      "businessDomain": "契約管理",
      "docId": "doc-restricted-contract",
      "fileName": "顧問契約書_実案件サンプル.txt",
      "matchReason": null,
      "reasonCode": "restricted_sensitivity",
      "reasonLabel": "Restricted 情報",
      "recommendation": "exclude",
      "score": 0,
      "scoreBreakdown": undefined,
    },
    {
      "businessDomain": "料金管理",
      "docId": "doc-stale-pricing",
      "fileName": "料金表_2023.csv",
      "matchReason": null,
      "reasonCode": "superseded_or_stale",
      "reasonLabel": "古い／上書き候補",
      "recommendation": "needs_review",
      "score": 0,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 0,
        "recency": 0,
      },
    },
  ],
  "missingHints": [
    "「社内手順」に関する現行の正本文書が見つかりません",
  ],
  "totalClassified": 10,
}
`;

exports[`candidateSelection golden (S4) > matches snapshot for payroll purpose (English synonym expansion) 1`] = `
{
  "candidates": [
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-checklist",
      "fileName": "給与計算チェックリスト.md",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 13.925570776255707,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 4,
        "documentType": 0,
        "fileName": 3,
        "freshness": 3,
        "recency": 1.9255707762557077,
      },
    },
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-exception-memo",
      "fileName": "給与計算_例外対応メモ.txt",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 11.870776255707762,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 4,
        "documentType": 0,
        "fileName": 3,
        "freshness": 3,
        "recency": 1.8707762557077625,
      },
    },
    {
      "businessDomain": "教育・研修",
      "docId": "doc-onboarding-rules",
      "fileName": "就業規則テンプレート.md",
      "matchReason": "業務領域「教育・研修」が目的に一致、正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 10.657077625570777,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 4,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.6570776255707762,
      },
    },
    {
      "businessDomain": "料金管理",
      "docId": "doc-current-pricing",
      "fileName": "料金表_2026.csv",
      "matchReason": "正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 6.821461187214612,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.8214611872146118,
      },
    },
    {
      "businessDomain": "顧客対応",
      "docId": "doc-masking-pending",
      "fileName": "顧客対応メモ_書式.md",
      "matchReason": null,
      "reasonCode": "masking_required_unavailable",
      "reasonLabel": "マスク済み版なし",
      "recommendation": "needs_review",
      "score": 4.914611872146119,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.9146118721461187,
      },
    },
    {
      "businessDomain": "顧客対応",
      "docId": "doc-customer-memo-safe",
      "fileName": "顧客対応メモ_匿名化.txt",
      "matchReason": "現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 4.90365296803653,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.9036529680365297,
      },
    },
    {
      "businessDomain": "助成金相談",
      "docId": "doc-grant-consult",
      "fileName": "助成金相談メモ.txt",
      "matchReason": "現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 4.881735159817351,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.8817351598173515,
      },
    },
    {
      "businessDomain": "年末調整",
      "docId": "doc-upload-failed",
      "fileName": "年末調整_案内文.txt",
      "matchReason": null,
      "reasonCode": "human_confirmation_required",
      "reasonLabel": "人間確認が必要",
      "recommendation": "needs_review",
      "score": 4.84337899543379,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.84337899543379,
      },
    },
    {
      "businessDomain": "契約管理",
      "docId": "doc-restricted-contract",
      "fileName": "顧問契約書_実案件サンプル.txt",
      "matchReason": null,
      "reasonCode": "restricted_sensitivity",
      "reasonLabel": "Restricted 情報",
      "recommendation": "exclude",
      "score": 0,
      "scoreBreakdown": undefined,
    },
    {
      "businessDomain": "料金管理",
      "docId": "doc-stale-pricing",
      "fileName": "料金表_2023.csv",
      "matchReason": null,
      "reasonCode": "superseded_or_stale",
      "reasonLabel": "古い／上書き候補",
      "recommendation": "needs_review",
      "score": 0,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 0,
        "recency": 0,
      },
    },
  ],
  "missingHints": [],
  "totalClassified": 10,
}
`;

exports[`candidateSelection golden (S4) > matches snapshot with responseLimit applied (ranking order preserved) 1`] = `
{
  "candidates": [
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-checklist",
      "fileName": "給与計算チェックリスト.md",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 48.92557077625571,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 24,
        "documentType": 0,
        "fileName": 18,
        "freshness": 3,
        "recency": 1.9255707762557077,
      },
    },
    {
      "businessDomain": "給与計算",
      "docId": "doc-payroll-exception-memo",
      "fileName": "給与計算_例外対応メモ.txt",
      "matchReason": "業務領域「給与計算」が目的に一致、ファイル名に目的キーワードを含む、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 46.87077625570776,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 24,
        "documentType": 0,
        "fileName": 18,
        "freshness": 3,
        "recency": 1.8707762557077625,
      },
    },
    {
      "businessDomain": "料金管理",
      "docId": "doc-current-pricing",
      "fileName": "料金表_2026.csv",
      "matchReason": "正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 6.821461187214612,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.8214611872146118,
      },
    },
    {
      "businessDomain": "教育・研修",
      "docId": "doc-onboarding-rules",
      "fileName": "就業規則テンプレート.md",
      "matchReason": "正本候補として登録済み、現行版",
      "reasonCode": null,
      "reasonLabel": null,
      "recommendation": "include",
      "score": 6.657077625570777,
      "scoreBreakdown": {
        "authoritative": 2,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.6570776255707762,
      },
    },
    {
      "businessDomain": "顧客対応",
      "docId": "doc-masking-pending",
      "fileName": "顧客対応メモ_書式.md",
      "matchReason": null,
      "reasonCode": "masking_required_unavailable",
      "reasonLabel": "マスク済み版なし",
      "recommendation": "needs_review",
      "score": 4.914611872146119,
      "scoreBreakdown": {
        "authoritative": 0,
        "businessDomain": 0,
        "documentType": 0,
        "fileName": 0,
        "freshness": 3,
        "recency": 1.9146118721461187,
      },
    },
  ],
  "missingHints": [
    "「社内手順」に関する現行の正本文書が見つかりません",
  ],
  "totalClassified": 10,
}
`;
